--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
       url: https://github.com/trufi-association/trufi-app.git
       ref: feat/293-generalize-code
 
+  global_configuration: 1.2.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -53,6 +55,8 @@ flutter:
   # https://flutter.dev/assets-and-images/#from-packages
   assets:
     - assets/cfg/
+    - assets/data/
+    - assets/images/
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
