--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,10 @@
 name: trotro_app
 description: A new Flutter application.
 
+# The following line prevents the package from being accidentally published to
+# pub.dev using `pub publish`. This is preferred for private packages.
+publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
 # followed by an optional build number separated by a +.
@@ -14,22 +18,16 @@ description: A new Flutter application.
 version: 1.0.0+2015
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
-    sdk: flutter
-  flutter_localizations:
     sdk: flutter
 
   trufi_core:
     git:
       url: https://github.com/trufi-association/trufi-core.git
       ref: master
-
-  global_configuration: 1.2.0
-  intl: 0.16.0
-  intl_translation: 0.17.7
 
 dev_dependencies:
   flutter_test:
@@ -58,7 +56,6 @@ flutter:
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
   assets:
-    - assets/cfg/
     - assets/data/
     - assets/images/
 
