--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,27 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.trotro_app">
 
+    <!-- The INTERNET permission is required for development. Specifically,
+         flutter needs it to communicate with the running application
+         to allow setting breakpoints, to provide hot reload, etc.
+    -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <queries>
+      <intent>
+          <action android:name="android.intent.action.VIEW" />
+          <data android:scheme="https" />
+      </intent>
+      <intent>
+          <action android:name="android.intent.action.DIAL" />
+          <data android:scheme="tel" />
+      </intent>
+      <intent>
+          <action android:name="android.intent.action.SEND" />
+          <data android:mimeType="*/*" />
+      </intent>
+    </queries>
    <application
         android:label="trotro_app"
         android:icon="@mipmap/ic_launcher">
