--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,9 @@ dependencies:
     sdk: flutter
 
   trufi_core:
-    path: ../trufi-core
+    git:
+      url: git@github.com:trufi-association/trufi-core.git
+      ref: 87491d1b7125deaec1b4ee2e9b47b193f9caa92b
 
 dev_dependencies:
   flutter_test:
