--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.0.0+4
+version: 2.0.1+5
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -25,9 +25,7 @@ dependencies:
     sdk: flutter
 
   trufi_core:
-    git:
-      url: git@github.com:trufi-association/trufi-core.git
-      ref: 21d71e25dbb7e0476489330d3a72eb3531f5055d
+    path: ../trufi-core
 
 dev_dependencies:
   flutter_test:
