--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,33 +1,34 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.trotro_app">
-
-    <!-- The INTERNET permission is required for development. Specifically,
-         flutter needs it to communicate with the running application
-         to allow setting breakpoints, to provide hot reload, etc.
-    -->
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <queries>
-      <intent>
-          <action android:name="android.intent.action.VIEW" />
-          <data android:scheme="https" />
-      </intent>
-      <intent>
-          <action android:name="android.intent.action.DIAL" />
-          <data android:scheme="tel" />
-      </intent>
-      <intent>
-          <action android:name="android.intent.action.SEND" />
-          <data android:mimeType="*/*" />
-      </intent>
-    </queries>
+    package="app.trotro.navigator">
+   <uses-permission android:name="android.permission.INTERNET" />
+   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+   <queries>
+     <intent>
+       <action android:name="android.intent.action.VIEW" />
+       <data android:scheme="https" />
+     </intent>
+     <intent>
+       <action android:name="android.intent.action.DIAL" />
+       <data android:scheme="tel" />
+     </intent>
+     <intent>
+       <action android:name="android.intent.action.SENDTO" />
+       <data android:scheme="smsto" />
+     </intent>
+     <intent>
+       <action android:name="android.intent.action.SEND" />
+       <data android:mimeType="*/*" />
+     </intent>
+   </queries>
    <application
-        android:label="trotro_app"
+        android:label="Trotro"
+        android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
-            android:launchMode="singleTop"
+            android:exported="true"
+            android:launchMode="singleTask"
             android:theme="@style/LaunchTheme"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
             android:hardwareAccelerated="true"
@@ -40,18 +41,16 @@
               android:name="io.flutter.embedding.android.NormalTheme"
               android:resource="@style/NormalTheme"
               />
-            <!-- Displays an Android View that continues showing the launch screen
-                 Drawable until Flutter paints its first frame, then this splash
-                 screen fades out. A splash screen is useful to avoid any visual
-                 gap between the end of Android's launch screen and the painting of
-                 Flutter's first frame. -->
-            <meta-data
-              android:name="io.flutter.embedding.android.SplashScreenDrawable"
-              android:resource="@drawable/launch_background"
-              />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+            <!-- App Links -->
+            <intent-filter android:autoVerify="true">
+              <action android:name="android.intent.action.VIEW" />
+              <category android:name="android.intent.category.DEFAULT" />
+              <category android:name="android.intent.category.BROWSABLE" />
+              <data android:scheme="https" android:host="cbba.trufi.dev" android:pathPrefix="/app" />
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
