[Feat] Updated uniLinks with schema accra.trufi.dev

--- a/ios/Runner/Runner.entitlements
+++ b/ios/Runner/Runner.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>applinks:accra.trotro.dev</string>
+		<string>applinks:accra.trufi.dev</string>
 	</array>
 </dict>
 </plist>
