--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -50,7 +50,7 @@
               <action android:name="android.intent.action.VIEW" />
               <category android:name="android.intent.category.DEFAULT" />
               <category android:name="android.intent.category.BROWSABLE" />
-              <data android:scheme="https" android:host="cbba.trufi.dev" android:pathPrefix="/app" />
+              <data android:scheme="https" android:host="accra.trufi.dev" android:pathPrefix="/app" />
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
