--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 3.3.1+2017
+version: 3.3.1+2018
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
@@ -31,9 +31,7 @@ dependencies:
     sdk: flutter
 
   trufi_core:
-    git:
-      url: https://github.com/trufi-association/trufi-core.git
-      ref: 3.4.3
+    path: ../trufi-core
 
 dev_dependencies:
   flutter_test:
