--- a/ios/Runner/Runner.entitlements
+++ b/ios/Runner/Runner.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>applinks:gh-accra.af.api.trufi-association.org</string>
+		<string>applinks:trotro-app.trufi.dev</string>
 	</array>
 </dict>
 </plist>
